Create New Event

--- a/Go4Venue-UI/pom.xml
+++ b/Go4Venue-UI/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>Sample</groupId>
-  <artifactId>Sample</artifactId>
+  <groupId>Go4Venue-UI</groupId>
+  <artifactId>Go4Venue-UI</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
   <name>Go4Venue-UI</name>
@@ -40,7 +40,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
-		<finalName>Sample</finalName>
+		<finalName>Go4Venue-UI</finalName>
 	</build>
 
 
