to resolve conflicts

--- a/Go4Venue-UI/src/main/properties/dev/application.properties
+++ b/Go4Venue-UI/src/main/properties/dev/application.properties
@@ -1,4 +1,4 @@
 application.jdbc.driver = com.mysql.jdbc.Driver
-application.jdbc.url=jdbc:mysql://127.0.0.1:3306/venue
+application.jdbc.url=jdbc:mysql://127.0.0.1:3306/newvenue
 application.jdbc.user=root
-application.jdbc.password=go4venue
+application.jdbc.password=
