--- a/Go4Venue-UI/src/main/webapp/WEB-INF/web.xml
+++ b/Go4Venue-UI/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,14 @@
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <load-on-startup>1</load-on-startup>
   </servlet>
+  <servlet>
+   <servlet-name>googleOauthCallback</servlet-name>
+    <servlet-class>com.go4venue.web.servlet.GoogleOAuthCallback</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>googleOauthCallback</servlet-name>
+    <url-pattern>/googleOauthCallback</url-pattern>
+  </servlet-mapping>
   <servlet-mapping>
     <servlet-name>spring-web</servlet-name>
     <url-pattern>/</url-pattern>
